using-mongo-atlas/k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitchenette-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kitchenette-server
  template:
    metadata:
      labels:
        app: kitchenette-server
    spec:
      containers:
        - name: kitchenette-server
          image: amitazoulay1611/the-kitchenette-server:latest
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: kitchenette-server-service
spec:
  selector:
    app: kitchenette-server
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
