using-mongo-atlas/k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kitchenette-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kitchenette-client
  template:
    metadata:
      labels:
        app: kitchenette-client
    spec:
      containers:
        - name: kitchenette-client
          image: amitazoulay1611/the-kitchenette-client:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: kitchenette-client-service
spec:
  selector:
    app: kitchenette-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
