using-mongo-atlas/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kitchenette-client-ingress
spec:
  rules:
    - host: kitchenette.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kitchenette-client-service
                port:
                  number: 80
